<resources>
    <string name="app_name">SWMSportWithMe</string>
    <string name="welcome_to">Welcome to</string>
    <string name="swm_sport_with_me">SWM Sport With Me</string>
    <string name="register">Register</string>
    <string name="Password">Password:</string>
    <string name="Email">Email:</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="next">Next</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="hosting_an_activity">Hosting an activity</string>
    <string name="profile_creation">Profile Creation</string>
    <string name="birthdate">Birthdate:</string>
    <string name="full_name">Full name:</string>
    <string name="joining_an_activity">Joining an activity</string>
    <string name="hobbies">Hobbies:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>