<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="177dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="158dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="230dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="219dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478"
        tools:layout_editor_absoluteX="76dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="77dp"
        android:layout_height="19dp"
        android:text="@string/welcome_to"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="128dp"
        android:layout_height="18dp"
        android:text="@string/swm_sport_with_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="215dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/c74ljgt1t4o1ko28ycm8"
        tools:layout_editor_absoluteY="278dp" />

</androidx.constraintlayout.widget.ConstraintLayout>