<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <CheckBox
        android:id="@+id/DogWalk_Registration"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="436dp"
        android:text="Dog walking"
        app:layout_constraintEnd_toStartOf="@+id/Tennis_Registration"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/football_Registration"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="107dp"
        android:text="Football"
        app:layout_constraintEnd_toStartOf="@+id/Tennis_Registration"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Basketball_Registration"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="118dp"
        android:text="Basketball"
        app:layout_constraintEnd_toEndOf="@+id/next"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Activity_JoinOrHost"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Swimming_Registration"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="107dp"
        android:text="Swim"
        app:layout_constraintEnd_toStartOf="@+id/Tennis_Registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Running_Registration"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="392dp"
        android:text="Running"
        app:layout_constraintEnd_toEndOf="@+id/Tennis_Registration"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Tennis_Registration"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Tennis_Registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="30dp"
        android:text="Tennis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Swimming_Registration"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Swim_Registration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="440dp"
        android:text="Swim"
        app:layout_constraintEnd_toStartOf="@+id/Basketball_Registration"
        app:layout_constraintStart_toStartOf="@+id/Swimming_Registration"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="14dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Genders"
        app:layout_constraintEnd_toEndOf="@+id/Genders"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Genders"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/Genders"
        android:layout_width="127dp"
        android:layout_height="90dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="241dp"
        app:layout_constraintBottom_toTopOf="@+id/Activity_JoinOrHost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Email_Registration"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <RadioButton
            android:id="@+id/Male_Registration"
            android:layout_width="119dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Male" />

        <RadioButton
            android:id="@+id/Female_Registration"
            android:layout_width="162dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:text="Female" />

        <RadioButton
            android:id="@+id/Other_Gender_Registration"
            android:layout_width="117dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Other" />
    </RadioGroup>

    <TextView
        android:id="@+id/Registration_Top_Text"
        android:layout_width="216dp"
        android:layout_height="61dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:autoText="false"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/Birth_Date_Registration"
        android:layout_width="237dp"
        android:layout_height="47dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Birth date:"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <EditText
        android:id="@+id/Email_Registration"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Genders"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <EditText
        android:id="@+id/Full_Name_Registration"
        android:layout_width="237dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Full name:"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/Password_Registration"
        android:layout_width="238dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:password="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_Registration" />

    <EditText
        android:id="@+id/Repeat_Password_Registration"
        android:layout_width="237dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Repeat password:"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:password="true"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <Button
        android:id="@+id/next"
        android:layout_width="114dp"
        android:layout_height="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/Activity_JoinOrHost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="149dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Genders">

        <RadioButton
            android:id="@+id/Joining_CheckBox_Registration"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Joining an activity" />

        <RadioButton
            android:id="@+id/Hosting_CheckBox_Registration"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hosting an activity" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="280dp"
        android:text="Hobbies:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>